[project]
name = "bbbill-bot"
version = "0.1.0"
description = "AI assistant that answers questions about the Big Beautiful Bill (H.R.1) using LangChain + FAISS"
authors = [
    {name = "Lucas Royland",email = "roylucas@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
